--- a/DiarioDePesas/src/main/webapp/css/styles.css
+++ b/DiarioDePesas/src/main/webapp/css/styles.css
@@ -17,3 +17,13 @@
 .hero p {
     text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
 }
+
+.noEjerciciosFoundBackdrop{
+	background-image: url('../assets/not-found.webp');
+    background-size: cover;
+    width:70vw;
+    background-position: center;
+    height: 50vh;
+    margin-left:auto;
+    opacity: .5;
+}
