Cambio gráfico de sin ejercicios por uno propio y agrego páginas de error 404

--- a/DiarioDePesas/src/main/webapp/css/styles.css
+++ b/DiarioDePesas/src/main/webapp/css/styles.css
@@ -20,7 +20,8 @@
 
 .noEjerciciosFoundBackdrop{
 	background-image: url('../assets/not-found.webp');
-    background-size: cover;
+    background-size: contain;
+	background-repeat: no-repeat;
     width:70vw;
     background-position: center;
     height: 50vh;
